# medium-code-examples

./: LICENSE  README.md
rf-detr-example/: .gitignore  README.md  download_images.py  export_rfdetr.py  image_inference.py  inference.py  model.py  model_quant.py  pyproject.toml  video_inference.py  video_inference_pytorch.py
